# kotiki

./: .env  .gitignore  Cargo.toml  schema.sql  scheme.sql  sqlx-data.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  endpoints.ts
frontend/src/Components/: BadgeCard.tsx  Cats.tsx  CreateForm.tsx  EditForm.tsx  EmptyBadgeCard.tsx
frontend/src/types/: cat.interface.ts
migrations/: 0001_catsTable.sql
public/react/: asset-manifest.json  index.html
public/react/assets/: index-0355af29.js  index-045ebc31.js  index-0821b654.js  index-0a0abe79.js  index-0e369a32.js  index-0f26a8cf.js  index-1b216ed3.js  index-2602fd82.js  index-295b8c78.js  index-32f3a9a4.js  index-35dde0ca.js  index-362e0017.js  index-3c9e3dca.js  index-3ea72fb9.js  index-43ebae60.js  index-44991b19.js  index-4540be63.js  index-570f8220.js  index-59e0ddd5.js  index-64a1a875.js  index-65e24396.js  index-67288250.js  index-6d04bcfd.js  index-7a5203d6.js  index-7b019528.js  index-7dcf03e2.js  index-861f4fb5.js  index-8665c6b8.js  index-88c99f8d.js  index-8a0185b8.js  index-8db2e74b.js  index-985fcc14.js  index-ac52ef6a.js  index-bc172bd3.js  index-bfdbe93e.js  index-c0e7d492.js  index-c2310397.js  index-c73e1ae9.js  index-cbf8300a.js  index-cc040b5a.js  (+10 more)
public/react/static/js/: main.47f881fb.js
src/: cors.rs  main.rs  models.rs
src/controllers/: cats.rs  images.rs  mod.rs  react.rs  result.rs
