[package]
name = "kotiki"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.18.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
shuttle-rocket = "0.18.0"
tokio = "1.28.2"
shuttle-shared-db = { version = "0.18.0", features = ["postgres"] }
sqlx = "0.6.3"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"
